SoundSettings: Add screenshot sounds settings
Change-Id: I15d54cddfa259bf5b059144942c479ea40e8058d

--- a/res/values/screwd_strings.xml
+++ b/res/values/screwd_strings.xml
@@ -153,4 +153,7 @@
     <!-- Running services -->
     <string name="background_processes_settings_title">Background processes</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+
 </resources>
